crates/oxc_semantic/tests/snapshots/cfg__cfg_files@argument_map.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/argument_map.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$1 = Reference(<arguments>)\n$0 = Constant(<'map'>)\n$2 = $1[$0]"]
    2 [ label = "$3 = Function{}"]
    0 -> 1 [ ]
    0 -> 2 [ ]
}

