crates/oxc_semantic/tests/snapshots/cfg__cfg_files@arrow_expressions.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/arrow_expressions.js
---
digraph {
    0 [ label = "$0 = Function{}\n$3 = Function{}"]
    1 [ label = "$return = Reference(<b>)"]
    2 [ label = "$1 = Reference(<x>)\n$2 = Reference(<y>)\n$return = $1 + $2"]
    0 -> 1 [ ]
    0 -> 2 [ ]
}

