crates/oxc_semantic/tests/snapshots/cfg__cfg_files@assignment_operators.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/assignment_operators.js
---
digraph {
    0 [ label = "$0 = Reference(<x>)"]
    1 [ label = "$1 = Reference(<y>)\n$3 = $0 || $1"]
    2 [ label = "$2 = $0"]
    3 [ label = "$4 = Reference(<x>)"]
    4 [ label = "$5 = Reference(<y>)\n$7 = $4 && $5"]
    5 [ label = "$6 = $4"]
    6 [ label = "$8 = Reference(<x>)"]
    7 [ label = "$9 = Reference(<y>)\n$11 = $8 ?? $9"]
    8 [ label = "$10 = $8"]
    9 [ label = "$12 = Reference(<x>)\n$13 = Reference(<y>)\n$14 = $12 = $13\n$15 = Reference(<x>)\n$16 = Reference(<y>)\n$17 = $15 -= $16"]
    0 -> 2 [ ]
    0 -> 1 [ ]
    1 -> 3 [ ]
    2 -> 3 [ ]
    3 -> 5 [ ]
    3 -> 4 [ ]
    4 -> 6 [ ]
    5 -> 6 [ ]
    6 -> 8 [ ]
    6 -> 7 [ ]
    7 -> 9 [ ]
    8 -> 9 [ ]
}

