crates/oxc_semantic/tests/snapshots/cfg__cfg_files@break_from_a_label_in_global_scope.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/break_from_a_label_in_global_scope.js
---
digraph {
    0 [ label = ""]
    1 [ label = "Unreachable()\nbreak $0"]
    0 -> 1 [ ]
    0 -> 1 [ ]
}
