crates/oxc_semantic/tests/snapshots/cfg__cfg_files@class.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/class.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$1 = this\n$0 = $1.slice\n$2 = $0()"]
    2 [ label = "$3 = Function{}\n$4 = ClassMadeWithExpressions{$3}"]
    0 -> 1 [ ]
    0 -> 2 [ ]
}

