crates/oxc_semantic/tests/snapshots/cfg__cfg_files@class_extend_super.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/class_extend_super.js
---
digraph {
    0 [ label = "$0 = Reference(<A>)"]
    1 [ label = "$2 = super\n$1 = $2.noise\n$3 = Reference(<args>)\n$return = $1(...$3)"]
    2 [ label = "Unreachable()"]
    3 [ label = "$4 = Function{}\n$5 = ClassMadeWithExpressions{$0, $4}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    0 -> 3 [ ]
}

