crates/oxc_semantic/tests/snapshots/cfg__cfg_files@cond_expr_in_arrow_fn.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/cond_expr_in_arrow_fn.js
---
digraph {
    0 [ label = "$5 = Function{}"]
    1 [ label = "$0 = Reference(<a>)\n$1 = $0()"]
    2 [ label = "$3 = Reference(<b>)\n$2 = $3()"]
    3 [ label = "$4 = Reference(<c>)\n$2 = $4()"]
    4 [ label = "$return = $2"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    2 -> 3 [ ]
    1 -> 2 [ ]
    2 -> 4 [ ]
    1 -> 3 [ ]
    3 -> 4 [ ]
}

