crates/oxc_semantic/tests/snapshots/cfg__cfg_files@do_while_break.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/do_while_break.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = "Unreachable()"]
    5 [ label = ""]
    6 [ label = ""]
    7 [ label = "Unreachable()"]
    8 [ label = "$0 = Constant(<true>)"]
    9 [ label = ""]
    10 [ label = ""]
    11 [ label = ""]
    12 [ label = "$0 = Constant(<true>)"]
    13 [ label = ""]
    14 [ label = ""]
    15 [ label = "Unreachable()"]
    16 [ label = "Unreachable()"]
    17 [ label = "$1 = Function{}"]
    0 -> 1 [ ]
    3 -> 2 [ ]
    2 -> 4 [ ]
    6 -> 7 [ ]
    6 -> 7 [ ]
    5 -> 8 [ ]
    6 -> 8 [ ]
    8 -> 9 [ ]
    8 -> 6 [ ]
    1 -> 3 [ ]
    11 -> 12 [ ]
    12 -> 13 [ ]
    12 -> 14 [ ]
    13 -> 11 [ ]
    13 -> 15 [ ]
    13 -> 16 [ ]
    3 -> 5 [ ]
    9 -> 10 [ ]
    3 -> 2 [ ]
    2 -> 11 [ ]
    1 -> 11 [ ]
    0 -> 17 [ ]
}

