crates/oxc_semantic/tests/snapshots/cfg__cfg_files@for_in.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/for_in.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$0 = Constant(<'init'>)"]
    2 [ label = "$1 = Constant(<'test'>)"]
    3 [ label = "$2 = Constant(<'update'>)"]
    4 [ label = "$3 = Constant(<'body'>)"]
    5 [ label = "$4 = Constant(<'after for loop'>)"]
    6 [ label = "$5 = Function{}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    2 -> 4 [ ]
    4 -> 3 [ ]
    3 -> 2 [ ]
    2 -> 5 [ ]
    0 -> 6 [ ]
}

